--- a/Vaccine/src/userinterface/SystemAdminWorkArea/ManageNetworkJPanel.form
+++ b/Vaccine/src/userinterface/SystemAdminWorkArea/ManageNetworkJPanel.form
@@ -65,7 +65,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="1" rowCount="4">
-                <Column editable="false" title="Name" type="java.lang.String"/>
+                <Column editable="false" title="State" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -86,7 +86,7 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Name"/>
+        <Property name="text" type="java.lang.String" value="State"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="submitJButton">
